--- a/Draughts/Draughts/Draughts.csproj
+++ b/Draughts/Draughts/Draughts.csproj
@@ -53,6 +53,12 @@
       <DependentUpon>Board.cs</DependentUpon>
     </Compile>
     <Compile Include="Board_situation.cs" />
+    <Compile Include="Endgame.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Endgame.Designer.cs">
+      <DependentUpon>Endgame.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,6 +77,9 @@
     </Compile>
     <EmbeddedResource Include="Board.resx">
       <DependentUpon>Board.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Endgame.resx">
+      <DependentUpon>Endgame.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
